Added navigation and List Activity

--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -13,6 +13,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="124dp"
         android:layout_weight="1"
+        android:onClick="showList"
         android:text="@string/vodka_button"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -25,6 +26,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="124dp"
         android:layout_weight="1"
+        android:onClick="showList"
         android:text="@string/rum_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.694"
@@ -37,6 +39,7 @@
         android:layout_height="117dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
+        android:onClick="showList"
         android:text="@string/gin_button"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/vodka_button" />
@@ -48,6 +51,7 @@
         android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
+        android:onClick="showList"
         android:text="@string/other_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.694"
