--- a/app/src/main/res/layout/activity_recipe_details.xml
+++ b/app/src/main/res/layout/activity_recipe_details.xml
@@ -10,20 +10,39 @@
         android:id="@+id/imageView"
         android:layout_width="112dp"
         android:layout_height="83dp"
-        android:layout_marginEnd="44dp"
+        android:layout_marginEnd="68dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="72dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@drawable/vodka"
-        tools:layout_editor_absoluteY="72dp" />
+        app:layout_constraintStart_toEndOf="@+id/textView"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/vodka" />
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="112dp"
+        android:layout_width="0dp"
         android:layout_height="45dp"
-        android:layout_marginEnd="88dp"
-        android:layout_marginStart="16dp"
-        android:text="TextView"
-        app:layout_constraintEnd_toStartOf="@+id/imageView"
-        app:layout_constraintHorizontal_bias="1.0"
+        android:layout_marginStart="64dp"
+        android:layout_marginTop="84dp"
+        android:text="Name of cocktail"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="85dp" />
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="154dp"
+        android:layout_height="35dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="56dp"
+        android:text="Ingredients in the X"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
+
+    <ListView
+        android:layout_width="255dp"
+        android:layout_height="241dp"
+        android:layout_marginStart="40dp"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:layout_editor_absoluteY="234dp" />
+
 </android.support.constraint.ConstraintLayout>
