--- a/app/src/main/res/layout/activity_recipe_details.xml
+++ b/app/src/main/res/layout/activity_recipe_details.xml
@@ -10,7 +10,7 @@
         android:id="@+id/cocktailName"
         android:layout_width="106dp"
         android:layout_height="0dp"
-        android:layout_marginTop="88dp"
+        android:layout_marginTop="36dp"
         android:gravity="center"
         android:text="Name of cocktail"
         android:textSize="16sp"
@@ -27,16 +27,44 @@
         android:layout_marginTop="16dp"
         android:background="#ccc"
         android:drawablePadding="8dp"
-        android:drawableRight="@drawable/vodka"
-        android:gravity="left"
-        android:text="TextView"
-        android:textStyle="bold"
+        android:drawableTop="@drawable/vodka"
+        android:gravity="center"
+        android:text="Ingredients"
+        android:textAlignment="textStart"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cocktailName"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.0"
+        tools:ignore="RtlCompat" />
+
+    <TextView
+        android:id="@+id/recipeHowToDetails"
+        android:layout_width="235dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="36dp"
+        android:background="#ccc"
+        android:drawablePadding="8dp"
+        android:text="How To"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.503"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/recipeDetails"
+        app:layout_constraintVertical_bias="0.175" />
+
+    <ImageView
+        android:id="@+id/cocktailImages"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/ic_launcher_background"
+        tools:layout_editor_absoluteX="27dp"
+        tools:layout_editor_absoluteY="153dp" />
 
 </android.support.constraint.ConstraintLayout>
