--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,8 @@
         android:onClick="showList"
         android:text="@string/vodka_button"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginLeft="16dp" />
 
     <Button
         android:id="@+id/rum_button"
@@ -42,7 +43,8 @@
         android:onClick="showList"
         android:text="@string/gin_button"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/vodka_button" />
+        app:layout_constraintTop_toBottomOf="@+id/vodka_button"
+        android:layout_marginLeft="16dp" />
 
     <Button
         android:id="@+id/other_button"
@@ -57,5 +59,14 @@
         app:layout_constraintHorizontal_bias="0.694"
         app:layout_constraintStart_toEndOf="@+id/gin_button"
         app:layout_constraintTop_toBottomOf="@+id/rum_button" />
+
+    <Button
+        android:id="@+id/fav_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="showFavorites"
+        android:text="Favorites"
+        app:layout_constraintBaseline_toBaselineOf="parent"
+        tools:layout_editor_absoluteY="403dp" />
 
 </android.support.constraint.ConstraintLayout>
