--- a/app/src/main/res/layout/activity_recipe_details.xml
+++ b/app/src/main/res/layout/activity_recipe_details.xml
@@ -17,7 +17,7 @@
 
         <TextView
             android:id="@+id/cocktailName"
-            android:layout_width="193dp"
+            android:layout_width="479dp"
             android:layout_height="41dp"
             android:layout_marginEnd="8dp"
             android:layout_marginTop="16dp"
@@ -25,7 +25,7 @@
             android:gravity="center"
             android:text="Name of cocktail"
             android:textColor="#585858"
-            android:textSize="16sp"
+            android:textSize="24sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -36,15 +36,14 @@
             android:id="@+id/recipeDetails"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
+            android:layout_marginTop="8dp"
             android:drawablePadding="8dp"
             android:fontFamily="@font/abril_fatface"
             android:gravity="center"
             android:text="Ingredients"
             android:textAlignment="textStart"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-            android:textColor="#585858"
-            app:layout_constraintHorizontal_bias="0.501"
+            android:textColor="#606060"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/cocktailImages"
@@ -53,25 +52,25 @@
         <TextView
 
             android:id="@+id/recipeHowToDetails"
-            android:layout_width="229dp"
-            android:layout_height="117dp"
+            android:layout_width="306dp"
+            android:layout_height="299dp"
             android:layout_marginBottom="8dp"
             android:layout_marginTop="56dp"
-            android:background="@drawable/border"
             android:drawablePadding="8dp"
             android:fontFamily="@font/abril_fatface"
-            android:lineSpacingExtra="8sp"
+            android:lineSpacingExtra="4sp"
             android:text="How to"
-            android:textColor="#585858"
+            android:textAlignment="textStart"
             android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+            android:textColor="#606060"
+            android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.503"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/recipeDetails"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintVertical_bias="1.0" />
 
         <ImageView
             android:id="@+id/cocktailImages"
@@ -94,10 +93,12 @@
             android:layout_marginTop="8dp"
             android:fontFamily="@font/abril_fatface"
             android:text="How To mix:"
+            android:textAlignment="center"
             android:textColor="#585858"
+            android:textSize="19sp"
+            android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/recipeHowToDetails"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.501"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintStart_toStartOf="parent"
