added UI and tweaks

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/barfly9"
+    android:background="@drawable/mainactivitybackground"
     tools:context="hi.hbv601g.cocktailboi.MainActivity">
 
     <Button
@@ -12,15 +12,13 @@
         android:layout_width="316dp"
         android:layout_height="56dp"
         android:layout_marginBottom="24dp"
-        android:tag="@string/vodka_btn_tag"
-        android:layout_width="132dp"
-        android:layout_height="117dp"
+        android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="124dp"
         android:layout_weight="1"
         android:background="@drawable/border"
         android:fontFamily="@font/abril_fatface"
         android:onClick="showList"
+        android:tag="@string/vodka_btn_tag"
         android:text="@string/vodka_button"
         app:layout_constraintBottom_toTopOf="@+id/rum_button"
         app:layout_constraintEnd_toEndOf="parent"
@@ -33,12 +31,8 @@
         android:layout_width="316dp"
         android:layout_height="56dp"
         android:layout_marginBottom="24dp"
-        android:layout_marginEnd="8dp"
         android:layout_marginRight="16dp"
-        android:layout_marginStart="8dp"
         android:tag="@string/rum_btn_tag"
-        android:layout_width="132dp"
-        android:layout_height="117dp"
         android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="124dp"
@@ -57,17 +51,13 @@
         android:layout_width="316dp"
         android:layout_height="56dp"
         android:layout_marginBottom="24dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginEnd="16dp"
         android:layout_marginLeft="16dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="16dp"
         android:background="@drawable/border"
         android:fontFamily="@font/abril_fatface"
-        android:tag="@string/gin_btn_tag"
-        android:layout_width="132dp"
-        android:layout_height="117dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
         android:onClick="showList"
+        android:tag="@string/gin_btn_tag"
         android:text="@string/gin_button"
         app:layout_constraintBottom_toTopOf="@+id/other_button"
         app:layout_constraintEnd_toEndOf="parent"
@@ -82,8 +72,6 @@
         android:background="@drawable/border"
         android:fontFamily="@font/abril_fatface"
         android:tag="@string/other_btn_tag"
-        android:layout_width="132dp"
-        android:layout_height="117dp"
         android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
