--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -68,14 +68,11 @@
         android:id="@+id/other_button"
         android:layout_width="316dp"
         android:layout_height="56dp"
-        android:layout_marginBottom="144dp"
+        android:layout_marginBottom="116dp"
         android:background="@drawable/border"
         android:fontFamily="@font/abril_fatface"
-        android:tag="@string/other_btn_tag"
-        android:layout_marginEnd="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
         android:onClick="showList"
+        android:tag="@string/other_btn_tag"
         android:text="@string/other_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -90,6 +87,8 @@
         android:background="@drawable/border"
         android:fontFamily="@font/abril_fatface"
         android:onClick="showFavorites"
+        android:text="@string/fav_button"
+        app:layout_constraintBaseline_toBaselineOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/vodka_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -97,9 +96,6 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
-        android:text="@string/fav_button"
-        app:layout_constraintBaseline_toBaselineOf="parent"
-        tools:layout_editor_absoluteY="403dp" />
+        app:layout_constraintVertical_bias="0.0" />
 
 </android.support.constraint.ConstraintLayout>
