--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -79,6 +79,28 @@
         app:layout_constraintRight_toRightOf="parent" />
 
     <Button
+        android:id="@+id/filter_button"
+        android:layout_width="316dp"
+        android:layout_height="56dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+
+
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="24dp"
+        android:layout_weight="1"
+        android:background="@drawable/border"
+        android:fontFamily="@font/abril_fatface"
+        android:text="@string/filter_button"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/other_button"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <Button
         android:id="@+id/fav_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
